# mcpo

./: .env.example  .gitignore  CHANGELOG.md  DECISIONS.md  HANDOFF_PROMPT.md  README.md  README_SCRIPTS.md  docker-compose.yml  mcp-planned-upgrade.md  mcpo.json  mcpo.json.backup  mcpo_state.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.bat  start.ps1  stop.bat
.backup-21-08-25/: .gitignore  CHANGELOG.md  README.md  start.bat  start.sh  stop.sh  test.bat
.backup-21-08-25/docs/: PROJECT_BLUEPRINT_SUMMARY.md
.backup-21-08-25/dont-read-or-use-archive/: current_files.txt  index-recovered-latest-v2.html  logs.md  (+2 more)
.github/: copilot-instructions.md
dev/: README.md
docs/: CLEANUP_SUMMARY.md  MCP_SELF_MANAGEMENT_GUIDE.md  OPENWEBUI_CONNECTION_GUIDE.md  PRODUCTION_SETUP.md  Project Reconstruction Record _ Google AI Studio.md  ROADMAP.md  SESSION_AUTH_PROPOSAL.md  TOOL_FILTERING_FIX.md  UPGRADE_ADVANCEMENTS_2025.md  WIP_INTENT_MAP.md  cursor_review_app_for_refactoring_and_p.md  project-diary.md
dont-read-or-use-archive/: UI_RECONSTRUCTION_PLAN.md  index-proposal.html  index-recovered-latest-v3.html  index-recovered-latest.html  old_files.txt  project-diary.md
lib/: minimax.md  minimax.ts
mcp-server-settings/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  types.ts
src/: test_static.py
tests/: test.json  test_config_models.py  test_enable_disable_flow.py  test_mcp_tools_integration.py  test_meta_logs_endpoint.py  test_model_tool_simulation.py  test_openapi_no_empty_schemas.py  test_protocol_and_output_validation.py  test_protocol_version_header.py  test_real_tool_execution.py  test_request.json  test_state_persistence.py  test_time_server_integration.py  test_time_server_openapi_integration.py  test_tool_error_envelope.py  test_tool_timeout.py
tools/: export-codex.ps1  test_providers.py
(+124 files in other folders)
