[project]
name = "mcpo"
version = "1.0.0-rc1"
description = "OpenHubUI - Universal AI Infrastructure Hub for OpenWebUI. MCP tools proxy with future support for multi-provider AI and audio services."
authors = [
    { name = "Timothy Jaeryang Baek", email = "tim@openwebui.com" },
    { name = "OpenWebUI Community" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["mcp", "openapi", "openwebui", "ai", "proxy", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "mcp>=1.12.1",
    "mcp[cli]>=1.12.1",
    "fastmcp",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.1",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.0",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
    "watchdog>=4.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/open-webui/mcpo"
Documentation = "https://github.com/open-webui/mcpo/blob/main/README.md"
Repository = "https://github.com/open-webui/mcpo"
Issues = "https://github.com/open-webui/mcpo/issues"
Changelog = "https://github.com/open-webui/mcpo/blob/main/CHANGELOG.md"

[project.scripts]
mcpo = "mcpo:app"
mcpp-proxy = "mcpo.proxy:main"
mcpp = "mcpo.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
]
